Footer component y header component + base.service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<h1>PROYECTO FINAL</h1>
+<app-header></app-header>
+<img src="assets/img/portada.png" alt="logo" class="img-fluid" />
+<router-outlet></router-outlet>
+
+<app-footer></app-footer>
