--- a/src/app/core/layout/footer/footer.component.html
+++ b/src/app/core/layout/footer/footer.component.html
@@ -1,15 +1,11 @@
-<footer
-  class="text-center text-lg-start text-white fixed-bottom"
-  style="background-color: #1c2331"
->
+<footer class="text-center text-lg-start text-white">
   <!-- Section: Social media -->
   <section
-    class="d-flex justify-content-between p-4"
-    style="background-color: #617885"
+    class="d-flex justify-content-between align-items-center p-4 social-media"
   >
     <!-- Left -->
     <div class="me-5">
-      <span>Redes Sociales</span>
+      <span class="text-dark">Redes Sociales</span>
     </div>
 
     <!-- Right -->
@@ -17,112 +13,82 @@
       <a
         href="https://www.facebook.com/Cala-Home-Dec%C3%B3-115276836982670"
         target="_blank"
-        class="text-white me-4"
+        class="text-dark me-4"
       >
         <i class="fab fa-facebook-f"></i>
       </a>
-      <a href="" class="text-white me-4">
+      <a href="" class="text-dark me-4">
         <i class="fab fa-twitter"></i>
       </a>
-      <a href="" class="text-white me-4">
-        <i class="fab fa-google"></i>
-      </a>
+
       <a
         href="https://www.instagram.com/cala.macramedeco/"
         target="_blank"
-        class="text-white me-4"
+        class="text-dark me-4"
       >
         <i class="fab fa-instagram"></i>
       </a>
-      <a href="" class="text-white me-4">
-        <i class="fab fa-linkedin"></i>
-      </a>
-      <a href="" class="text-white me-4">
-        <i class="fab fa-github"></i>
-      </a>
     </div>
-    <!-- Right -->
   </section>
-  <!-- Section: Social media -->
 
-  <!-- Section: Links  -->
-  <section class="">
-    <div class="container text-center text-md-start mt-5">
-      <!-- Grid row -->
-      <div class="row mt-3">
-        <!-- Grid column -->
-        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+  <section class="main-content d-flex align-items-center">
+    <div class="container text-start">
+      <div class="row mt-2">
+        <div class="col-md-4 col-lg-3 mx-auto mb-2">
           <!-- Content -->
-          <h6 class="text-uppercase fw-bold">Nuestra empresa</h6>
+          <h6 class="text-uppercase fw-bold">Tienda de objetos únicos</h6>
           <hr
             class="mb-4 mt-0 d-inline-block mx-auto"
-            style="width: 60px; background-color: #7c4dff; height: 2px"
+            style="width: 150px; background-color: #db997f; height: 4px"
           />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
-            reprehenderit pariatur maiores, exercitationem adipisci.
+            En Cala le otorgamos valor a lo artesanal y a lo natural. Cada una
+            de nuestras piezas está confeccionada a mano y priorizamos el uso de
+            fibras vegetales para desarrollar los diseños.
           </p>
         </div>
 
-        <!-- Grid column -->
-        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-          <!-- Links -->
-          <h6 class="text-uppercase fw-bold">Productos</h6>
+        <div class="col-md-4 col-lg-3 mx-auto mb-2">
+          <h6 class="text-uppercase fw-bold">Fabricación a medida</h6>
           <hr
             class="mb-4 mt-0 d-inline-block mx-auto"
-            style="width: 60px; background-color: #7c4dff; height: 2px"
+            style="width: 150px; background-color: #db997f; height: 4px"
           />
           <p>
-            <a href="#!" class="text-white">producto1</a>
-          </p>
-          <p>
-            <a href="#" class="text-white">producto2</a>
-          </p>
-          <p>
-            <a href="#" class="text-white">producto3</a>
-          </p>
-          <p>
-            <a href="#" class="text-white">producto4</a>
+            Además de los objetos estandarizados, fabricamos también, piezas a
+            medida, personalizadas a cada uno de nuestros clientes. Objetos
+            singulares que destacan por el amor y la originalidad de las manos
+            de nuestra artesana y diseñadora.
           </p>
         </div>
 
-        <!-- Grid column -->
-        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-          <!-- Links -->
-          <h6 class="text-uppercase fw-bold">Links</h6>
-          <hr
-            class="mb-4 mt-0 d-inline-block mx-auto"
-            style="width: 60px; background-color: #7c4dff; height: 2px"
-          />
-          <p>
-            <a href="#" class="text-white">Ingresar</a>
-          </p>
-          <p>
-            <a href="#" class="text-white">Registrarse</a>
-          </p>
-        </div>
-
-        <!-- Grid column -->
-        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-2">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold">Contacto</h6>
           <hr
             class="mb-4 mt-0 d-inline-block mx-auto"
-            style="width: 60px; background-color: #7c4dff; height: 2px"
+            style="width: 80px; background-color: #db997f; height: 4px"
           />
           <p><i class="fas fa-home mr-3"></i> Misiones, Argentina</p>
           <p><i class="fas fa-envelope mr-3"></i> info@Cala-Maca.com</p>
           <p><i class="fas fa-phone mr-3"></i> 1122334455</p>
         </div>
-        <!-- Grid column -->
       </div>
-      <!-- Grid row -->
     </div>
   </section>
-  <!-- Section: Links  -->
 
-  <!-- Copyright -->
-  <div class="text-center text-dark p-3" style="background-color: #db997f">
-    © 2021 Copyright
-  </div>
+  <section>
+    <div
+      class="
+        text-center text-dark
+        p-3
+        copyright
+        d-flex
+        align-items-center
+        justify-content-center
+      "
+    >
+      © 2021 Cala Macrame Deco
+    </div>
+  </section>
 </footer>
