--- a/src/app/features/account/pages/signup/signup.component.html
+++ b/src/app/features/account/pages/signup/signup.component.html
@@ -1,34 +1,45 @@
 <div class="container-fluid">
   <div class="row d-flex align-items-center justify-content-center">
-    <div class="col-md-6">
+    <div class="col-md-12 col-lg-6 my-4">
       <div class="card px-5 py-5">
-        <h5 class="text-center">Formulario de Registración</h5>
-        <small class="mt-2 text-muted text-center"
-          >Registrate para comprar, recibir ofertas via email, y hacer
-          consultas!</small
-        >
-        <i class="fa fa-solid fa-at"></i>
+        <h3 class="text-center">Formulario de Registro</h3>
+        <div class="d-flex mt-4 justify-content-center">
+          <i class="fa fa-solid fa-at me-2 mt-1"></i
+          ><span>Datos de Contacto</span>
+        </div>
         <div class="form-input d-flex">
           <input type="text" class="form-control me-2" placeholder="Email" />
 
-          <input type="text" class="form-control" placeholder="Phone" />
+          <input type="text" class="form-control" placeholder="Telefono" />
         </div>
-        <i class="fa fa-user"></i>
+        <div class="d-flex mt-2 justify-content-center">
+          <i class="fa fa-user me-2 mt-1"></i>
+          <span>Datos del Usuario</span>
+        </div>
         <div class="form-input d-flex">
           <input type="text" class="form-control me-2" placeholder="Username" />
-          <input type="text" class="form-control me-2" placeholder="Name" />
-          <input type="text" class="form-control me-2" placeholder="Surname" />
-          <input type="text" class="form-control" placeholder="Age" />
+          <input type="text" class="form-control me-2" placeholder="Nombre" />
+          <input type="text" class="form-control me-2" placeholder="Apellido" />
+          <input type="text" class="form-control" placeholder="Edad" />
         </div>
         <div class="form-input m-auto">
-          <i class="fa fa-lock"></i>
-          <input type="text" class="form-control" placeholder="Password" />
+          <div class="d-flex mt-2 mb-1 justify-content-center">
+            <i class="fa fa-lock me-2 mt-1"></i>
+            <span>Contraseña</span>
+          </div>
+          <input
+            type="password"
+            class="form-control text-center"
+            placeholder="***************"
+          />
         </div>
-        <button class="btn btn-primary mt-4 signup">Registrarse</button>
+        <button class="btn btn-primary mt-5 signup">Registrarse</button>
 
         <div class="text-center mt-4">
           <span>Ya sos usuario/a?</span>
-          <a href="#" class="text-decoration-none"> Login</a>
+          <a routerLink="../login" class="login-text text-decoration-none">
+            Login</a
+          >
         </div>
       </div>
     </div>
