--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,1 +1,7 @@
-<img src="assets/img/portada.png" alt="logo" class="img-fluid" />
+<div class="container-fluid d-flex justify-content-center">
+  <img
+    src="./../../../assets/img/cala-trans.png"
+    alt="logo"
+    class="img-fluid my-4 p-5"
+  />
+</div>
