--- a/src/app/features/account/pages/signup/signup.component.css
+++ b/src/app/features/account/pages/signup/signup.component.css
@@ -23,6 +23,7 @@ h3 {
   margin-bottom: 10px;
   margin-top: 10px;
   height: 120px;
+  
 }
 
 .form-control {
@@ -34,7 +35,7 @@ h3 {
 
 .form-control {
   background-color: #fff;
-  color: #fff;
+  color: #000;
 }
 
 input:focus {
