--- a/src/app/features/account/pages/signup/signup.component.css
+++ b/src/app/features/account/pages/signup/signup.component.css
@@ -14,7 +14,6 @@ h3 {
   padding: 40px;
   background-color: #1c2331;
   color: #fff;
-  height: 600px;
   width: 780px;
 }
 
@@ -22,8 +21,6 @@ h3 {
   position: relative;
   margin-bottom: 10px;
   margin-top: 10px;
-  height: 120px;
-  
 }
 
 .form-control {
@@ -44,13 +41,13 @@ input:focus {
 }
 
 .signup {
-  height: 50px;
-  font-size: 14px;
+  /* height: 50px;
+  font-size: 14px; */
 }
 .btn {
   background-color: #617886;
   border-color: #efc2bd;
-  height: 80px;
+  /* height: 80px; */
   font-size: 18px;
 }
 
@@ -60,4 +57,17 @@ input:focus {
 }
 .login-text {
   color: #efc2bd;
+}
+
+.form-registro-group {
+  flex-direction: row;
+}
+
+@media (max-width: 600px) {
+  .form-registro-group {
+    flex-direction: column;
+  }
+  .form-registro-group > input {
+    margin-top: 1rem;
+  }
 }
