--- a/src/app/core/layout/navbar/navbar.component.css
+++ b/src/app/core/layout/navbar/navbar.component.css
@@ -29,3 +29,9 @@ a:focus {
   color: #fff;
   background-color: #1c2331;
 }
+
+@media (max-width: 992px) {
+  #linkCuenta {
+    margin: inherit !important;
+  }
+}
