--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,9 @@
   box-sizing: border-box;
   font-family: "Nunito", sans-serif;
   font-size: 15px;
+  --dark: #1c1e21;
+  --pinky: #efc2bd;
+  --bluish: #617886;
 }
 
 body {
@@ -14,16 +17,17 @@ body {
 
 /* SPINNER */
 .noclick {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   cursor: progress;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .loader,
