--- a/src/app/features/account/pages/signin/signin.component.html
+++ b/src/app/features/account/pages/signin/signin.component.html
@@ -1,48 +1,45 @@
 <div class="container">
-  <div class="row d-flex align-items-center justify-content-center">
-    <div class="col-md-12 col-lg-6">
-      <form [formGroup]="signinForm" (ngSubmit)="signin()">
-        <div class="card mb-5 px-5 py-5">
-          <h3 class="text-center mb-5">Login</h3>
-
-          <div class="form-group text-center mb-2">
-            <i class="fa fa-solid fa-at me-2"></i>
-            <label for="email">Correo electrónico</label>
-            <div class="form-input d-flex">
-              <input
-                type="email"
-                class="form-control me-2"
-                placeholder="Ingresa tu correo electrónico"
-                formControlName="email"
-              />
-            </div>
-            <span class="text-danger">{{ verifyField("email") }}</span>
+  <div class="row d-flex align-items-center justify-content-center p-5">
+    <form [formGroup]="signinForm" (ngSubmit)="signin()" class="card px-5 py-5">
+      <h3 class="text-center mb-5">Login</h3>
+      <div
+        class="login-form-inputs d-flex justify-content-center align-items-center"
+      >
+        <div class="form-group text-start">
+          <i class="fa fa-solid fa-at me-1"></i>
+          <label for="email">Correo electrónico</label>
+          <div class="form-input">
+            <input
+              type="email"
+              class="form-control"
+              placeholder="Ingresa tu correo electrónico"
+              formControlName="email"
+            />
           </div>
-          <div class="form-group text-center">
-            <i class="fa fa-lock me-2"></i>
-            <label for="password" class="mb-2">Contraseña</label>
-            <div class="form-input m-auto">
-              <input
-                type="password"
-                class="form-control"
-                placeholder="Ingresa tu contraseña"
-                formControlName="password"
-              />
-            </div>
-            <span class="text-danger">{{ verifyField("password") }}</span>
-          </div>
-          <button class="btn btn-primary mt-4 signin">Ingresar</button>
-
-          <div class="text-center mt-4">
-            <span>No estás registrado?</span>
-            <a
-              routerLink="../register"
-              class="text-decoration-none ms-2 register"
-              >Registrate</a
-            >
-          </div>
+          <span class="text-danger">{{ verifyField("email") }}</span>
         </div>
-      </form>
-    </div>
+        <div class="form-group text-start">
+          <i class="fa fa-lock me-1"></i>
+          <label for="password">Contraseña</label>
+          <div class="form-input">
+            <input
+              type="password"
+              class="form-control"
+              placeholder="Ingresa tu contraseña"
+              formControlName="password"
+            />
+          </div>
+          <span class="text-danger">{{ verifyField("password") }}</span>
+        </div>
+      </div>
+      <button class="btn btn-primary mt-4 signin">Ingresar</button>
+
+      <div class="text-center mt-4">
+        <span>No estás registrado?</span>
+        <a routerLink="../register" class="text-decoration-none ms-2 register"
+          >Registrate</a
+        >
+      </div>
+    </form>
   </div>
 </div>
