--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,7 +1,115 @@
-<div class="container-fluid d-flex justify-content-center">
-  <img
-    src="./../../../assets/img/cala-trans.png"
-    alt="logo"
-    class="img-fluid my-4 p-5"
-  />
+<div class="d-flex row">
+  <header class="d-flex align-items-center justify-content-center">
+    <div class="d-flex row mt-5">
+      <h1 class="d-flex justify-content-center text-light">
+        Bienvenidos a Cala Macramé Deco!
+      </h1>
+      <h4 class="d-flex justify-content-center text-light">Tu tienda online</h4>
+      <div class="text-center mt-3">
+
+        <a routerLink="account/login" class="text-decoration-none">
+          Ingresa</a
+        >
+        <span class="mx-3 text-light"> con tu usuario y contraseña o </span>
+        <a routerLink="account/register" class="text-decoration-none">
+          Registrate!</a
+        >
+      </div>
+    </div>
+  </header>
+  <section class="d-flex row m-3">
+    <div class="p-5">
+      <h2 class="mt-3 text-center">Tienda de objetos unicos</h2>
+      <h6 class="mb-3 text-center text-muted">
+        En c a l a le otorgamos valor a lo artesanal y a lo natural. Cada una de
+        nuestras piezas está confeccionada a mano y priorizamos el uso de fibras
+        vegetales para desarrollar los diseños.
+      </h6>
+    </div>
+    <div class="d-flex justify-content-around">
+      <div class="section-main d-flex row">
+        <img src="./../../../assets/img/svg3.svg" alt="" />
+        <div class="m-3">
+          <h4 class="ms-3">Ambientación</h4>
+          <p class="text-muted">
+            Contamos con el servicio de asesorías en ambientación y diseño de
+            interiores. No sólo si necesitas ayuda para elegir una de nuestras
+            piezas para tu ambiente, sino también como poder acondicionarlo con
+            tips de decoración y distribución de objetos para mejorar la
+            estética y la funcionalidad de tus espacios, con visitas
+            presenciales o asesorías 100% online.
+          </p>
+        </div>
+      </div>
+      <div class="section-main d-flex row">
+        <img src="./../../../assets/img/svg5.svg" alt="" />
+        <div class="m-3">
+          <h4 class="ms-3">Fabricación a medida</h4>
+          <p class="text-muted">
+            Además de los objetos estandarizados, fabricamos también, piezas a
+            medida, personalizadas a cada uno de nuestros clientes. Objetos
+            singulares que destacan por el amor y la originalidad de las manos
+            de nuestra artesana y diseñadora.
+          </p>
+        </div>
+      </div>
+      <div class="section-main d-flex row">
+        <img src="./../../../assets/img/svg4.svg" alt="" />
+        <div class="m-3">
+          <h4 class="ms-3">Quienes Somos</h4>
+          <p class="text-muted">
+            C a l a como muchos otros emprendimientos, nació en la vorágine de
+            la pandemia, en medio de la introspección y con el objetivo de
+            venerar los espacios interiores y exteriores de nuestro hogar, lugar
+            que nos contiene y nos identifica.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="my-5">
+    <img class="logo" src="./../../../assets/img/cala-trans.png" alt="" />
+  </section>
+  <section class="section-end d-flex justify-content-around align-items-center">
+    <div class="card col-md-6">
+      <div class="card-img">
+        <img src="./../../../assets/img/producto5.jpg" class="img-fluid" />
+      </div>
+    </div>
+
+    <div class="col-md-4 p-4">
+      <h2 class="text-center">Diseños unicos</h2>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae iste
+        perspiciatis doloremque. Lorem ipsum dolor sit amet consectetur,
+        adipisicing elit. Non molestias placeat recusandae deserunt hic esse
+        saepe, dolores modi earum ratione, facilis numquam ullam nostrum
+        similique illum alias natus nemo illo soluta facere doloribus
+        reprehenderit at! Excepturi autem, nulla quo consequuntur atque aperiam,
+        quae neque earum iusto, fugiat itaque et odit?
+      </p>
+
+    </div>
+  </section>
+  <section class="section-end d-flex justify-content-around align-items-center">
+    <div class="col-md-4 p-4">
+      <h2 class="text-center">Deco para interiores</h2>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae iste
+        perspiciatis doloremque. Lorem ipsum dolor sit amet consectetur,
+        adipisicing elit. Non molestias placeat recusandae deserunt hic esse
+        saepe, dolores modi earum ratione, facilis numquam ullam nostrum
+        similique illum alias natus nemo illo soluta facere doloribus
+        reprehenderit at! Excepturi autem, nulla quo consequuntur atque aperiam,
+        quae neque earum iusto, fugiat itaque et odit?
+      </p>
+
+    </div>
+    <div class="card col-md-6">
+      <div class="card-img">
+
+        <img src="./../../../assets/img/producto4.jpg" class="img-fluid" />
+      </div>
+    </div>
+  </section>
 </div>
