--- a/src/app/features/products/pages/products/products.component.html
+++ b/src/app/features/products/pages/products/products.component.html
@@ -2,12 +2,7 @@
   <h1 class="text-center my-5">Productos destacados del mes!</h1>
 
   <div
-    class="
-      row row-cols-1 row-cols-md-3 row-cols-lg-4
-      mb-3
-      d-flex
-      justify-content-between
-    "
+    class="row row-cols-1 row-cols-md-3 row-cols-lg-4 mb-3 d-flex justify-content-between"
   >
     <!--Estas imagenes son estáticas pero tenemos q traerlas del back!-->
     <div class="col">
