--- a/src/app/core/layout/navbar/navbar.component.html
+++ b/src/app/core/layout/navbar/navbar.component.html
@@ -42,9 +42,18 @@
         <li class="nav-item">
           <a class="nav-link" href="/consultas">Consultas</a>
         </li>
+        <li
+          class="nav-item dropdown admin-link"
+          *ngIf="
+            globals.decodedToken &&
+            globals.decodedToken.roles[0].name === 'admin'
+          "
+        >
+          <a class="nav-link" href="/admin"> Admin Panel </a>
+        </li>
         <hr class="dropdown-divider" style="color: white" />
         <li class="nav-item ms-auto" style="margin-right: 4rem" id="linkCuenta">
-          <div class="nav-item dropdown" *ngIf="!logIn()">
+          <div class="nav-item dropdown" *ngIf="!globals.token">
             <a
               class="nav-link dropdown-toggle"
               href="#"
@@ -66,7 +75,7 @@
               </li>
             </ul>
           </div>
-          <div class="nav-item dropdown" *ngIf="logIn()">
+          <div class="nav-item dropdown" *ngIf="globals.token">
             <a
               class="nav-link dropdown-toggle"
               href="#"
@@ -75,12 +84,12 @@
               data-bs-toggle="dropdown"
               aria-expanded="false"
             >
-              Bienvenido
+              Bienvenido {{ globals.decodedToken.username }}
             </a>
             <ul
               class="dropdown-menu"
               aria-labelledby="navbarDropdown"
-              *ngIf="logIn()"
+              *ngIf="globals.token"
             >
               <li>
                 <a class="dropdown-item" (click)="logout()">Logout</a>
