--- a/src/app/features/account/pages/signup/signup.component.css
+++ b/src/app/features/account/pages/signup/signup.component.css
@@ -21,7 +21,7 @@ h3 {
   padding: 0;
   transition: ease 0.3s;
   height: 100%;
-  padding-top: 0.5rem;
+  padding: 0.5rem;
 }
 
 .btn:hover {
@@ -48,6 +48,7 @@ h3 {
   0% {
     width: 0%;
   }
+
   90% {
     width: 100%;
   }
@@ -57,9 +58,11 @@ h3 {
   0% {
     height: 0.5rem;
   }
+
   90% {
     height: 0.5rem;
   }
+
   100% {
     height: 3rem;
   }
@@ -107,6 +110,7 @@ input:focus {
   background-color: #efc2bd;
   color: #1c1e21;
 }
+
 .login-text {
   color: #efc2bd;
 }
@@ -119,7 +123,8 @@ input:focus {
   .form-registro-group {
     flex-direction: column;
   }
-  .form-registro-group > input {
+
+  .form-registro-group>input {
     margin-top: 1rem;
   }
 }
