--- a/src/app/core/layout/navbar/navbar.component.html
+++ b/src/app/core/layout/navbar/navbar.component.html
@@ -1,33 +1,18 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg bg-softPinky">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">Inicio</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav w-100 mb-2 mb-lg-0">
+      <ul class="navbar-nav w-100  mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/"
-            >Quienes somos</a
-          >
+          <a class="nav-link active" aria-current="page" href="/">Quienes somos</a>
         </li>
         <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            id="navbarDropdown"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
             Productos
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -35,33 +20,26 @@
             <li>
               <a class="dropdown-item" href="/products">Ultimos agregados</a>
             </li>
-            <li><hr class="dropdown-divider" /></li>
+            <li>
+              <hr class="dropdown-divider" />
+            </li>
             <li><a class="dropdown-item" href="/products">Otros</a></li>
           </ul>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/consultas">Consultas</a>
         </li>
-        <li
-          class="nav-item dropdown admin-link"
-          *ngIf="
+        <li class="nav-item dropdown admin-link" *ngIf="
             globals.decodedToken &&
             globals.decodedToken.roles[0].name === 'admin'
-          "
-        >
+          ">
           <a class="nav-link" href="/admin"> Admin Panel </a>
         </li>
-        <hr class="dropdown-divider" style="color: white" />
+        <hr class="dropdown-divider" style="color: #1c1e21" />
         <li class="nav-item ms-auto" style="margin-right: 4rem" id="linkCuenta">
           <div class="nav-item dropdown" *ngIf="!globals.token">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdown"
-              role="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
               Cuenta
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -69,28 +47,16 @@
                 <a class="dropdown-item" routerLink="/account/login">Login</a>
               </li>
               <li>
-                <a class="dropdown-item" routerLink="/account/register"
-                  >Registro</a
-                >
+                <a class="dropdown-item" routerLink="/account/register">Registro</a>
               </li>
             </ul>
           </div>
           <div class="nav-item dropdown" *ngIf="globals.token">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdown"
-              role="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
               Bienvenido {{ globals.decodedToken.username }}
             </a>
-            <ul
-              class="dropdown-menu"
-              aria-labelledby="navbarDropdown"
-              *ngIf="globals.token"
-            >
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown" *ngIf="globals.token">
               <li>
                 <a class="dropdown-item" (click)="logout()">Logout</a>
               </li>
