--- a/src/app/features/account/pages/signin/signin.component.html
+++ b/src/app/features/account/pages/signin/signin.component.html
@@ -1,33 +1,29 @@
 <div class="container">
   <div class="row d-flex align-items-center justify-content-center p-5">
     <form [formGroup]="signinForm" (ngSubmit)="signin()" class="card px-5 py-5">
-      <h3 class="text-center mb-5">Login</h3>
-      <div
-        class="login-form-inputs d-flex justify-content-center align-items-center"
-      >
+      <h3 class="text-center mb-3"><i class="fas fa-sign-in-alt me-2"></i>Login</h3>
+      <div class="login-form-inputs d-flex justify-content-center align-items-center">
         <div class="form-group text-start">
-          <i class="fa fa-solid fa-at me-1"></i>
-          <label for="email">Correo electrónico</label>
           <div class="form-input">
-            <input
-              type="email"
-              class="form-control"
-              placeholder="Ingresa tu correo electrónico"
-              formControlName="email"
-            />
+            <div class="input-group mb-4">
+              <span class="input-group-text text-muted">
+                <i class="fas fa-envelope"></i>
+              </span>
+              <input type="email" class="form-control" placeholder="Ingresa tu correo electrónico"
+                formControlName="email" />
+            </div>
           </div>
           <span class="text-danger">{{ verifyField("email") }}</span>
         </div>
         <div class="form-group text-start">
-          <i class="fa fa-lock me-1"></i>
-          <label for="password">Contraseña</label>
           <div class="form-input">
-            <input
-              type="password"
-              class="form-control"
-              placeholder="Ingresa tu contraseña"
-              formControlName="password"
-            />
+            <div class="input-group mb-4">
+              <span class="input-group-text text-muted">
+                <i class="fas fa-key"></i>
+              </span>
+              <input type="password" class="form-control" placeholder="Ingresa tu contraseña"
+                formControlName="password" />
+            </div>
           </div>
           <span class="text-danger">{{ verifyField("password") }}</span>
         </div>
@@ -35,13 +31,11 @@
       <span class="text-danger" *ngIf="errorMessagge != ''">{{
         errorMessagge
       }}</span>
-      <button class="btn btn-primary mt-4 signin">Ingresar</button>
+      <button class="btn btn-primary mt-2 signin">Ingresar</button>
 
       <div class="text-center mt-4">
         <span>No estás registrado?</span>
-        <a routerLink="../register" class="text-decoration-none ms-2 register"
-          >Registrate</a
-        >
+        <a routerLink="../register" class="text-decoration-none ms-2 register">Registrate</a>
       </div>
     </form>
   </div>
