--- a/src/app/features/account/pages/signup/signup.component.html
+++ b/src/app/features/account/pages/signup/signup.component.html
@@ -1,76 +1,47 @@
 <div class="container-fluid">
   <div class="row d-flex align-items-center justify-content-center p-5">
     <form [formGroup]="signupForm" (ngSubmit)="signup()" class="card px-5 py-5">
-      <h3 class="text-center">Formulario de Registro</h3>
+      <h3 class="text-center"><i class="fas fa-user-plus me-2"></i>Registro</h3>
       <span style="color: red" class="text-center" *ngIf="registrationError">{{
         registrationErrorMessage
       }}</span>
       <div class="d-flex mt-4 justify-content-center">
-        <i class="fa fa-solid fa-at me-2 mt-1"></i
-        ><span>Datos de Contacto</span>
+        <i class="fa fa-solid fa-at me-2 mt-1"></i><span>Datos de Contacto</span>
       </div>
-      <div class="form-input d-flex form-registro-group">
-        <input
-          type="text"
-          class="form-control me-2"
-          placeholder="Email"
-          formControlName="email"
-        />
 
-        <input
-          type="text"
-          class="form-control"
-          placeholder="Celular"
-          formControlName="cel"
-        />
+      <div class="form-input d-flex form-registro-group">
+        <div class="input-group mb-2">
+          <span class="input-group-text text-muted">
+            <i class="fas fa-envelope"></i>
+          </span>
+          <input type="text" class="form-control me-2" placeholder="Email" formControlName="email" />
+        </div>
+        <div class="input-group mb-2">
+          <span class="input-group-text text-muted ">
+            <i class="fas fa-phone-alt"></i>
+          </span>
+          <input type="text" class="form-control me-2" placeholder="Celular" formControlName="cel" />
+        </div>
       </div>
       <div class="d-flex mt-2 justify-content-center">
         <i class="fa fa-user me-2 mt-1"></i>
         <span>Datos del Usuari@</span>
       </div>
       <div class="form-input d-flex form-registro-group">
-        <input
-          type="text"
-          class="form-control me-2"
-          placeholder="Nombre"
-          formControlName="name"
-        />
-        <input
-          type="text"
-          class="form-control me-2"
-          placeholder="Apellido"
-          formControlName="surname"
-        />
-        <input
-          type="number"
-          class="form-control me-2"
-          min="{{ getMinBirthYear() }}"
-          max="{{ getMaxBirthYear() }}"
-          value="{{ getMaxBirthYear() }}"
-          placeholder="Año de nacimiento"
-          formControlName="birthYear"
-        />
+        <input type="text" class="form-control me-2" placeholder="Nombre" formControlName="name" />
+        <input type="text" class="form-control me-2" placeholder="Apellido" formControlName="surname" />
+        <input type="number" class="form-control me-2" min="{{ getMinBirthYear() }}" max="{{ getMaxBirthYear() }}"
+          value="{{ getMaxBirthYear() }}" placeholder="Año de nacimiento" formControlName="birthYear" />
       </div>
       <div class="form-input d-flex form-registro-group">
-        <input
-          type="text"
-          class="form-control me-2"
-          placeholder="Username"
-          formControlName="username"
-        />
-        <input
-          type="password"
-          class="form-control me-2"
-          placeholder="***************"
-          formControlName="password"
-        />
+        <input type="text" class="form-control me-2" placeholder="Username" formControlName="username" />
+        <input type="password" class="form-control me-2" placeholder="***************" formControlName="password" />
       </div>
       <button class="btn btn-primary mt-3 signup">Registrarse</button>
       <div class="text-center mt-3">
         <span>Ya sos usuari@?</span>
         <a routerLink="../login" class="login-text text-decoration-none">
-          Login</a
-        >
+          Login</a>
       </div>
     </form>
   </div>
@@ -85,16 +56,17 @@
   <p>Para terminar de configurarla, verifica el correo que te enviamos</p>
   <div class="progress">
     <div class="progress-bar">
-      <a
-        href="/"
-        class="btn btn-lg"
-        role="progressbar"
-        aria-valuenow="0"
-        aria-valuemin="0"
-        aria-valuemax="100"
-      >
+      <a href="/" class="btn btn-lg" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
         Inicio
       </a>
     </div>
   </div>
 </div>
+
+<script>
+  const tooltips = document.querySelectorAll('.tt')
+  tooltips.forEach(t => {
+    new bootstrap.Tooltip(t)
+  })
+
+</script>
