--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,21 +1,6 @@
 <div class="d-flex row">
-  <header class="d-flex align-items-center justify-content-center">
-    <div class="d-flex row mt-5">
-      <h1 class="d-flex justify-content-center text-light">
-        Bienvenidos a Cala Macramé Deco!
-      </h1>
-      <h4 class="d-flex justify-content-center text-light">Tu tienda online</h4>
-      <div class="text-center mt-3">
-
-        <a routerLink="account/login" class="text-decoration-none">
-          Ingresa</a
-        >
-        <span class="mx-3 text-light"> con tu usuario y contraseña o </span>
-        <a routerLink="account/register" class="text-decoration-none">
-          Registrate!</a
-        >
-      </div>
-    </div>
+  <header>
+    <img class="img-fluid w-100 h-100" src="./../../../assets/img/Brands/portada.png">
   </header>
   <section class="d-flex row m-3">
     <div class="p-5">
