--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -21,25 +21,16 @@
         <td>{{ product.description }}</td>
         <td>{{ product.price }}</td>
         <td>{{ product.stock }}</td>
-        <td>{{ product.photos}}</td>
+        <td>{{ product.img[0]}}</td>
         <td>
-          <button
-            class="btn btn-danger"
-            *ngIf="globals.decodedToken.roles[0].name === 'admin'"
-          >
+          <button class="btn btn-danger" *ngIf="globals.decodedToken.roles[0].name === 'admin'">
             <i class="fas fa-user-times"></i>
           </button>
           <span style="margin: 0 5px"></span>
-          <button
-            type="button"
-            class="btn btn-success"
-            data-bs-toggle="modal"
-            data-bs-target="#editModal"
-            *ngIf="
+          <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#editModal" *ngIf="
               globals.decodedToken.roles[0].name === 'admin' ||
               globals.decodedToken.roles[0].name === 'moderator'
-            "
-          >
+            ">
             <i class="fas fa-user-edit"></i>
           </button>
         </td>
@@ -48,25 +39,13 @@
   </table>
 </div>
 
-<div
-  class="modal fade"
-  id="editModal"
-  tabindex="-1"
-  role="dialog"
-  aria-labelledby="editModalLabel"
-  aria-hidden="true"
-  data-bs-backdrop="static"
->
+<div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModalLabel" aria-hidden="true"
+  data-bs-backdrop="static">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="editModalLabel">Modal title</h5>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-        ></button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">...</div>
       <div class="modal-footer">
@@ -77,4 +56,3 @@
     </div>
   </div>
 </div>
-
