Tocando el navbar

--- a/src/app/core/layout/navbar/navbar.component.css
+++ b/src/app/core/layout/navbar/navbar.component.css
@@ -1,5 +1,41 @@
-.bg-softPinky {
-  background-color: var(--softPinky) !important;
+img {
+  width: 150px;
+  height: 50px;
+  padding: 12px;
+}
+button{
+  display: block;
+  position: relative;
+  overflow: hidden;
+}
+
+span {
+  transition: transform 0.2s ease-out;
+}
+
+button:hover .uno {
+  transform: translatey(100%);
+}
+
+button:hover .dos {
+  transform: none;
+}
+.uno{
+  display: inline-block;
+  padding: 5px;
+
+}
+
+.dos{
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: translateY(-100%);
 }
 
 nav {
