--- a/src/app/core/layout/navbar/navbar.component.html
+++ b/src/app/core/layout/navbar/navbar.component.html
@@ -1,12 +1,16 @@
-<nav class="navbar navbar-expand-lg bg-softPinky">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/">Inicio</a>
+<nav class="navbar navbar-expand-lg">
+  <div class="container-fluid d-flex justify-content-center">
+    <a class="navbar-brand" href="/">
+      <img src="./../../../../assets/img/Brands/c a l a trans.png" alt="">
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon uno" style="font-size:25px; padding: 5px"><i class="fas fa-bars"></i></span>
+      <span class="navbar-toggler-icon dos" style="font-size:25px; padding: 5px"><i class="fas fa-hamburger" aria-hidden= "true"></i></span>
+
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav w-100  mb-lg-0">
+      <ul class="navbar-nav w-100 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/">Quienes somos</a>
         </li>
