--- a/src/app/core/layout/footer/footer.component.html
+++ b/src/app/core/layout/footer/footer.component.html
@@ -1,94 +1,37 @@
-<footer class="text-center text-lg-start text-white">
-  <!-- Section: Social media -->
-  <section
-    class="d-flex justify-content-between align-items-center p-4 social-media"
-  >
-    <!-- Left -->
-    <div class="me-5">
-      <span class="text-dark">Redes Sociales</span>
-    </div>
+<footer>
+  <div class="container-lg d-grid align-items-center justify-content-center text-white py-5">
+    <div class="text-center py-5">
+      <div>
+        <a href="/">
+          <img class="logo-footer mb-5" src="./../../../../assets/img/Brands/c a l a macrameWhite trans.png"
+            alt="Logo White">
+        </a>
+      </div>
 
-    <!-- Right -->
-    <div>
-      <a
-        href="https://www.facebook.com/Cala-Home-Dec%C3%B3-115276836982670"
-        target="_blank"
-        class="text-dark me-4"
-      >
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <a href="" class="text-dark me-4">
-        <i class="fab fa-twitter"></i>
-      </a>
+      <div class="mb-5">
+        <a href="/" class="text-white me-3">Home</a>
+        <a href="/products" class="text-white me-3">Productos</a>
+        <a href="/cart" class="text-white me-3">Carrito</a>
+        <a href="/" class="text-white me-3">Quienes somos</a>
+        <a href="/consultas" class="text-white me-3">Consultas</a>
+      </div>
 
-      <a
-        href="https://www.instagram.com/cala.macramedeco/"
-        target="_blank"
-        class="text-dark me-4"
-      >
-        <i class="fab fa-instagram"></i>
-      </a>
-    </div>
-  </section>
+      <div class="mb-5">
+        <a href="https://www.facebook.com/Cala-Home-Dec%C3%B3-115276836982670" target="_blank" class="text-white me-3">
+          <i class="fab fa-facebook-f fa-lg"></i>
+        </a>
+        <a href="https://www.instagram.com/cala.macramedeco/" target="_blank" class="text-white">
+          <i class="fab fa-instagram fa-lg"></i>
+        </a>
+      </div>
 
-  <section class="main-content d-flex align-items-center">
-    <div class="container text-start">
-      <div class="row mt-2">
-        <div class="col-md-4 col-lg-3 mx-auto mb-2">
-          <!-- Content -->
-          <h6 class="text-uppercase fw-bold">Tienda de objetos únicos</h6>
-          <hr
-            class="mb-4 mt-0 d-inline-block mx-auto"
-            style="width: 150px; background-color: #db997f; height: 4px"
-          />
-          <p>
-            En Cala le otorgamos valor a lo artesanal y a lo natural. Cada una
-            de nuestras piezas está confeccionada a mano y priorizamos el uso de
-            fibras vegetales para desarrollar los diseños.
-          </p>
-        </div>
+      <div class="mb-5 ">
+        © 2021 Cala Macrame Deco
+      </div>
 
-        <div class="col-md-4 col-lg-3 mx-auto mb-2">
-          <h6 class="text-uppercase fw-bold">Fabricación a medida</h6>
-          <hr
-            class="mb-4 mt-0 d-inline-block mx-auto"
-            style="width: 150px; background-color: #db997f; height: 4px"
-          />
-          <p>
-            Además de los objetos estandarizados, fabricamos también, piezas a
-            medida, personalizadas a cada uno de nuestros clientes. Objetos
-            singulares que destacan por el amor y la originalidad de las manos
-            de nuestra artesana y diseñadora.
-          </p>
-        </div>
-
-        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-2">
-          <!-- Links -->
-          <h6 class="text-uppercase fw-bold">Contacto</h6>
-          <hr
-            class="mb-4 mt-0 d-inline-block mx-auto"
-            style="width: 80px; background-color: #db997f; height: 4px"
-          />
-          <p><i class="fas fa-home mr-3"></i> Misiones, Argentina</p>
-          <p><i class="fas fa-envelope mr-3"></i> info@Cala-Maca.com</p>
-          <p><i class="fas fa-phone mr-3"></i> 1122334455</p>
-        </div>
+      <div>
+        Mar del Plata, Buenos Aires, Argentina
       </div>
     </div>
-  </section>
-
-  <section>
-    <div
-      class="
-        text-center text-dark
-        p-3
-        copyright
-        d-flex
-        align-items-center
-        justify-content-center
-      "
-    >
-      © 2021 Cala Macrame Deco
-    </div>
-  </section>
+  </div>
 </footer>
