--- a/src/app/core/layout/navbar/navbar.component.html
+++ b/src/app/core/layout/navbar/navbar.component.html
@@ -6,8 +6,8 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon uno" style="font-size:25px; padding: 5px"><i class="fas fa-bars"></i></span>
-      <span class="navbar-toggler-icon dos" style="font-size:25px; padding: 5px"><i class="fas fa-hamburger" aria-hidden= "true"></i></span>
-
+      <span class="navbar-toggler-icon dos" style="font-size:25px; padding: 5px"><i class="fas fa-hamburger"
+          aria-hidden="true"></i></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav w-100 mb-lg-0">
